--- a/src/index.css
+++ b/src/index.css
@@ -122,7 +122,7 @@ body {
 }
 
 .react-datepicker {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Poppins', sans-serif !important;
 }
 
 .react-datepicker__triangle {
