--- a/src/index.css
+++ b/src/index.css
@@ -176,16 +176,12 @@ body {
   margin: 0;
 }
 
-.css-i9fmh8-MuiBackdrop-root-MuiModal-backdrop {
+.MuiBackdrop-root {
   background-color: transparent !important;
 }
 
 .MuiDrawer-root > .MuiPaper-root {
   visibility: visible !important;
-}
-
-.css-9emuhu-MuiPaper-root-MuiDrawer-paper {
-  box-shadow: none !important;
 }
 
 @layer utilities {
